# linux-threat-hunter

./: .gitignore  Cargo.toml  README.md
config/: default.toml
src/: cli.rs  config.rs  main.rs  platform.rs  report.rs
src/modules/: container_sentinel.rs  file_integrity.rs  log_analyzer.rs  mod.rs  network_hunter.rs  persistence_hunter.rs  process_scanner.rs  rootkit_detector.rs
src/tui/: mod.rs
