[package]
name = "linux-threat-hunter"
version = "2.0.0"
edition = "2021"
description = "Linux Threat Hunting Framework — 7-module threat detection engine: processes, file integrity, logs, network, persistence, rootkits, and container security"
license = "MIT"
repository = "https://github.com/morariuraulandrei-commits/linux-threat-hunter"
keywords = ["security", "threat-hunting", "linux", "forensics", "cybersecurity"]
categories = ["command-line-utilities"]

[[bin]]
name = "lthf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
regex = "1"
anyhow = "1"
walkdir = "2"
procfs = "0.16"
nix = { version = "0.28", features = ["process", "fs", "user", "socket"] }
log = "0.4"
env_logger = "0.11"
indicatif = { version = "0.17", features = ["tokio"] }
thiserror = "1"
once_cell = "1"
libc = "0.2"
ipnet = "2"
dns-lookup = "2"
ureq = { version = "2", features = ["json"] }
strum = { version = "0.26", features = ["derive"] }
tabled = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
